--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,9 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/discord.xml
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 .cxx
-.idea/discord.xml
